# sumo-tableaggregator

./: .gitignore  README.md  convert_to_parquet.py  pyproject.toml  setup.cfg  setup.py  test_duckdb_client_w_timing.py  test_duckdb_exp.py  test_duckdb_exp_w_real.py  test_duckdb_exp_w_timing.py  test_duckdb_exp_w_timing_over_many.py  test_polars.py  test_setup.py
src/sumo/aggregator/: _aggregate.py
src/sumo/table_aggregation/: __init__.py  _aggregate.py  _tidy.py  _utils.py  aggregate.py  dispatch.py  new_dispatch.py  utilities.py
tests/: conftest.py  context.py  test_dispatch.py  test_empty.py  test_expiry_time.py  test_large_tableaggregation.py  test_new_dispatch.py  test_tableaggregation.py  test_tableaggregation_drog.py  test_tableaggregation_vol.py  test_utilities.py  tidy.py
tests/data/: 2_columns_data.arrow  dispath_info_snorre.json  mini_aggregated.csv  query_results.json
tests/data/testrun/: cp_test_data.py  global_variables.yml
tests/data/testrun/realization-0/iter-0/share/results/tables/: .old_random.arrow.yml  .old_summary.arrow.yml  .random--ecalc.arrow.yml  .summary--eclipse.arrow.yml  summary--eclipse.arrow  summary.arrow
tests/data/testrun/realization-1/iter-0/share/results/tables/: .old_summary.arrow.yml  (+3 more)
tests/data/testrun/share/metadata/: fmu_case.yml  sumo_parent_id.yml
tests/tmp/: .DATE.arrow.yml  .FGPR.arrow.yml  .FOPT.arrow.yml  .aggregated_summary.arrow.yml  DATE.arrow  DATE_for_agg.arrow  FGPR.arrow  FGPR_mean.arrow  FGPR_p10.arrow  FGPR_p90.arrow  FOPT.arrow  FOPT_mean.arrow  FOPT_p10.arrow  FOPT_p90.arrow  aggregated_summary.arrow
(+16 files in other folders)
