[metadata]
name = sumo-aggregate-tables
version = 0.0.0
description=Python package for aggregation of tables from sumo
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url=https://github.com/equinor/sumo-tableaggregator
author=Equinor
license=GPLv3
licence_file = LICENCE
 classifiers =
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",

install_requires =
   "PyYAML",
   "pandas",
        "sumo-wrapper-python",
        "setuptools",
        "oneseismic",
        "azure-core",
        "deprecation",
        "ert>=2.38.0-b5"
[options]
package_dir=
    =src
packages=find:

python_requires = >=3.8

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
test=pytest